# fasthtml-example

./: .gitignore  FastHTML By Example.ipynb  README.md  deploy.sh  deploying-to-pythonanywhere.md  main.py  shoelace.py
00_game_of_life/: main.py  readme.md
01_todo_app/: README.md  main.py
02_chatbot/: Pipfile  README.md  basic.py  basic_openai.py  chunked_transfer.py  polling.py  requirements.txt  ws.py  ws_streaming.py  ws_streaming_llamaindex.py
03_pictionary/: README.md  canvas.js  main.py  requirements.txt
04_sse/: sse_chatbot.py  sse_clock.py  sse_clock_plus.py  sse_clock_scroll.py  sse_rand.py  sse_rand_scroll.py  sse_scroll.py  sse_starlette.py  sse_starlette_demo.py  ws_rand_scroll.py
3d-component/: card3d.css  card3d.js  card3d.py  main.py  playingcard.css  playingcard.py  requirements.txt
ai_pictionary/: draft1.py  readme.md
annotate_text/: README.md  main.py
chatbot_example/: draft1.py  main.py  readme.md  requirements.txt
chess_app/: README.md  chess_app.ipynb  chess_app.py
cli_oauth_example/: README.md  cli-server.py  client-do.py  client-login.py  server.py
code_editor/: README.md  code_editor.ipynb  code_editor.py  requirements.txt
code_highlight_and_copy/: main.py  readme.md
csv_editor/: README.md  main.py
data_spot_check/: README.md  main.py  requirements.txt
devtools/: README.md  main.py
doodle/: LICENCE  main.py  readme.md
e_commerce/: README.md  main.py  requirements.txt
echo/: .gitignore  main.py
test_todo_app/: README.md  main.py  pyproject.toml  todos.py
test_todo_app/tests/: conftest.py  test_routes.py
(+111 files in other folders)
